--- a/Views/HelpView.xaml
+++ b/Views/HelpView.xaml
@@ -62,8 +62,8 @@
                     </RichTextBlock>
                     <RichEditBox x:Name="editor" Loaded="OnLoaded" CornerRadius="8,8,8,8" Grid.Row="1" 
                      Margin="0,0,0,0" Style="{StaticResource MK_RichEditBoxStyle}"
-                     IsReadOnly="True" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
-                    <StackPanel Visibility="Collapsed" Orientation="Horizontal" Grid.Row="2" >
+                     IsReadOnly="false" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+                    <StackPanel Visibility="Visible" Orientation="Horizontal" Grid.Row="2" >
                         <Button Click="OpenButton_Click">Open File</Button>
                         <Button Click="SaveButton_Click">Save File</Button>
                     </StackPanel>
